tests/language/unit/compile_error/compile_error.agate
# result: runtime error
IO.println("before") # expect: before
# expect: test:2: Error at 'undefined': Variable 'undefined' is used but not defined.
import "compile_error/unit" for Unit # expect: Could not compile unit 'compile_error/unit'.
